config maar werkt nog niet

--- a/ntp.conf
+++ b/ntp.conf
@@ -12,11 +12,15 @@ filegen clockstats file clockstats type day enable
 
 
 # You do need to talk to an NTP server or two (or three).
-#server ntp.your-provider.example
+server be.pool.ntp.org 
 
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
 # pool: <http://www.pool.ntp.org/join.html>
+
+
+
+
 pool 0.debian.pool.ntp.org iburst
 pool 1.debian.pool.ntp.org iburst
 pool 2.debian.pool.ntp.org iburst
@@ -39,6 +43,16 @@ restrict -6 default kod notrap nomodify nopeer noquery limited
 restrict 127.0.0.1
 restrict ::1
 
+
+
+
+
+
+server mrt.uclllabs.be
+
+restrict 193.191.177.6 
+server -6 mrt.uclllabs.be
+restrict -6  2002:C1BF:B106::
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
 
