LABO NTP ntp.conf aangepast

--- a/ntp.conf
+++ b/ntp.conf
@@ -21,10 +21,12 @@ server be.pool.ntp.org
 
 
 
-pool 0.debian.pool.ntp.org iburst
-pool 1.debian.pool.ntp.org iburst
-pool 2.debian.pool.ntp.org iburst
-pool 3.debian.pool.ntp.org iburst
+server 0.be.pool.ntp.org iburst
+
+
+server 1.be.pool.ntp.org iburst
+server 2.be.pool.ntp.org iburst
+server 3.be.pool.ntp.org iburst
 
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
@@ -50,9 +52,12 @@ restrict ::1
 
 server mrt.uclllabs.be
 
-restrict 193.191.177.6 
+restrict 193.191.177.6
+ 
 server -6 mrt.uclllabs.be
+
 restrict -6  2002:C1BF:B106::
+
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
 
